--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -2,7 +2,7 @@ name: my first job
 on: workflow_dispatch
 jobs:
   firstjob:
-    runs-on: ubuntu:latest
+    runs-on: ubuntu-latest
     steps:
       - name: print my name 
         run: echo "my name is mohamed balboula"
